--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -17,7 +17,7 @@
     </ul>
   </div>
   <div class="buttom__menu">
-    <button class="Agendamento">AGENDAMENTO</button>
+    <a  href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."><button class="Agendamento">AGENDAMENTO</button></a>
     <button class="ver-mais">VER MAIS</button>
   </div>
 </div>
