feat: cards and inputs with TS

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,13 @@
-<p>card works!</p>
+<div class="card__content">
+  <div class="bg__card">
+    <img [src]=[image] alt="img">
+  </div>
+  <div class="sobre__cont">
+  <div class="sobre__content">
+    <p>{{ price }}</p>
+  </div>
+  <div class="agendamento__content">
+    <a href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."><button>AGENDAR</button></a>
+  </div>
+</div>
+</div>
