--- a/src/app/components/menu-bar/menu-bar.component.sass
+++ b/src/app/components/menu-bar/menu-bar.component.sass
@@ -5,8 +5,8 @@
   height: 0
   background-color: black
   width: 148px
-  height: 630px
-  z-index: 1
+  height: 680px
+  border: solid
 
 
   .logo__menu
@@ -51,7 +51,6 @@
   .buttom__menu
     flex-direction: column
     display: block
-    position: absolute
     margin: 20px
     bottom: 0
 
