--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,8 @@
-<app-menu-bar></app-menu-bar>
-<app-card></app-card>
+<div class="home__content">
+  <app-menu-bar></app-menu-bar>
+  <div class="card__content">
+  <app-card></app-card>
+  <app-card image="../../../assets/casal.jpg"></app-card>
+  <app-card image="../../../assets/luffy.jpg" price="R$ 50,00"></app-card>
+</div>
+</div>
