--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -12,7 +12,7 @@
         <a href="https://www.instagram.com/artby_beatriz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram fa-1x"></i><span>Instagram</span></a>
       </li>
       <li>
-        <a href="#"><i class="fa-brands fa-tiktok fa-1x"></i><span>Tiktok</span></a>
+        <a href="https://www.tiktok.com/@artby_beatriz?_t=8hWXpVuPekf&_r=1"><i class="fa-brands fa-tiktok fa-1x"></i><span>Tiktok</span></a>
       </li>
     </ul>
   </div>
