--- a/src/app/components/card/card.component.sass
+++ b/src/app/components/card/card.component.sass
@@ -1,5 +1,5 @@
 .card__content
-  background-color: #E2EBBE
+  background-color: #ebebeb
   height: 430px
   max-width: 400px
   gap: 15px
@@ -7,6 +7,7 @@
   display: grid
   flex-direction: column
   justify-content: flex-start
+
 
 .bg__card
   img
@@ -27,6 +28,42 @@
   margin-right: 15px
   width: 120px
   height: 30px
+  margin-bottom: 10px
+  border-radius: 1rem
+  color: #FFFFFF
+  background-color: Black
+  border: 1px solid #242424
+
+@media (max-width: 760px)
+  .card__content
+    display: grid
+    flex-direction: column
+    justify-content: flex-start
+    width: 300px
+    max-height: 400px
+    gap: 15px
+    border-radius: 10px
+    margin-bottom: 50px
+
+  .bg__card
+    img
+     max-height: 280px
+     max-width: 280px
+     margin: 2px 10px 0px 10px
+
+  .sobre__cont
+    display: flex
+    flex-direction: row
+    gap: 20px
+    justify-content: space-between
+  .sobre__content
+    font-weight: 700
+    margin-top: 0px
+    margin-left: 23px
+
+.agendamento__content > a > button
+  margin-right: 15px
+
   margin-bottom: 10px
   border-radius: 1rem
   color: #FFFFFF
