--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,23 +1,39 @@
+<span class="material-symbols-outlined"> menu </span>
 <div class="content__menu">
   <div class="logo__menu">
     <img src="../../../assets/logo.png" alt="logo" />
     <span>Sarah</span>
   </div>
-  <div class="nav__content">
-    <ul>
-      <li>
-        <a href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."><i class="fa-brands fa-whatsapp fa-1x"></i><span>Whatsapp</span></a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/artby_beatriz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram fa-1x"></i><span>Instagram</span></a>
-      </li>
-      <li>
-        <a href="https://www.tiktok.com/@artby_beatriz?_t=8hWXpVuPekf&_r=1"><i class="fa-brands fa-tiktok fa-1x"></i><span>Tiktok</span></a>
-      </li>
-    </ul>
-  </div>
-  <div class="buttom__menu">
-    <a  href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."><button class="Agendamento">AGENDAMENTO</button></a>
-    <button class="ver-mais">VER MAIS</button>
+  <div class="menu">
+    <img src="../../../assets/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+    <div class="nav__content">
+      <ul>
+        <li>
+          <a
+            href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
+            ><i class="fa-brands fa-whatsapp fa-1x"></i><span>Whatsapp</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/artby_beatriz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
+            ><i class="fa-brands fa-instagram fa-1x"></i
+            ><span>Instagram</span></a
+          >
+        </li>
+        <li>
+          <a href="https://www.tiktok.com/@artby_beatriz?_t=8hWXpVuPekf&_r=1"
+            ><i class="fa-brands fa-tiktok fa-1x"></i><span>Tiktok</span></a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="buttom__menu">
+      <a
+        href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
+        ><button class="Agendamento">AGENDAMENTO</button></a
+      >
+      <button class="ver-mais">VER MAIS</button>
+    </div>
   </div>
 </div>
