--- a/src/app/components/menu-bar/menu-bar.component.sass
+++ b/src/app/components/menu-bar/menu-bar.component.sass
@@ -2,12 +2,10 @@
   display: block
   position: absolute
   top: 0
-  height: 0
   background-color: black
   width: 148px
   height: 680px
   border: solid
-
 
   .logo__menu
     display: flex
@@ -47,12 +45,88 @@
           i
             margin: 10px
 
-
   .buttom__menu
     flex-direction: column
     display: block
     margin: 20px
     bottom: 0
+
+    button
+      width: 120px
+      height: 30px
+      margin-bottom: 10px
+      border-radius: 1rem
+
+.Agendamento
+  color: black
+  background-color: #FFFFFF
+  border: 1px solid #242424
+
+.ver-mais
+  color: #FFFFFF
+  background-color: Black
+  border: 1px solid #242424
+
+@media (max-width: 767.98px)
+
+  .content__menu
+    display: flex
+    flex-direction: row
+    position: fixed
+    z-index: 1
+    width: 100%
+    height: 80px
+    font-size: 40px
+    background-color: black
+    border: solid
+
+  .menu
+    display: none
+    position: absolute
+
+  .menu:hover
+    display: flex
+
+  .logo__menu
+    display: flex
+    flex-direction: column
+    justify-content: center
+    color: #FFFFFF
+
+    margin: 20px
+
+    img
+      display: flex
+      flex-direction: column
+      margin: auto
+      margin-left: 10px
+      height: 45px
+      border-radius: 50%
+
+    span
+      margin: auto
+
+  .nav__content
+    display: flex
+    justify-content: center
+    margin-top: 120px
+    margin-bottom: 120px
+
+    ul
+      text-decoration: none
+      list-style: none
+      li
+        font-size: 20px
+        margin-bottom: 20px
+        text-decoration: none
+        list-style: none
+        a
+          color: #FFFFFF
+          i
+            margin: 10px
+
+  .buttom__menu
+    flex-direction: column
 
     button
       width: 120px
