--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -6,3 +6,19 @@
   flex-direction: row
   justify-content: space-between
   margin-left: 150px
+
+@media (max-width: 700px)
+  .home__content
+    display: flex
+    flex-direction: column
+
+
+
+.card__content
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  margin: auto
+
+app-card:first-child
+  margin-top: 60px
