--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,12 @@
   <div class="card__content">
   <app-card image="../../../assets/lua2.jpg"></app-card>
   <app-card image="../../../assets/casal.jpg"></app-card>
-  <app-card image="../../../assets/luffy.jpg" price="R$ 50,00"></app-card>
+  <app-card image="../../../assets/luffy.jpg" price="R$ 50,00" status="INDISPONÍVEL"></app-card>
 </div>
+</div>
+<div class="btn-whatsapp">
+  <a
+            href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
+            target="_blank"
+            ><img src="../../../assets/whatssapp.svg" alt=""></a>
 </div>
