--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -7,6 +7,16 @@
   justify-content: space-between
   margin-left: 150px
 
+.btn-whatsapp
+  position: fixed
+  bottom: 3px
+  right: 9px
+  z-index: 2
+
+  img
+    max-width: 74px
+
+
 @media (max-width: 700px)
   .home__content
     display: flex
@@ -16,7 +26,5 @@
     flex-direction: column
     justify-content: space-between
     margin: auto
-  app-card:first-child
+    app-card: first-child
     margin-top: 60px
-
-
