--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,13 +1,18 @@
 <div class="card__content">
   <div class="bg__card">
-    <img [src]=[image] alt="img">
+    <img [src]=[image] alt="img" />
   </div>
   <div class="sobre__cont">
-  <div class="sobre__content">
-    <p>{{ price }}</p>
+    <div class="sobre__content">
+      <p>{{ price }}</p>
+    </div>
+    <div class="agendamento__content">
+      <a
+        href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
+        target="_blank"
+        ><button>AGENDAR</button></a
+      >
+    </div>
   </div>
-  <div class="agendamento__content">
-    <a href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."><button>AGENDAR</button></a>
-  </div>
-</div>
+  <app-card-description status="{{ status }}"></app-card-description>
 </div>
