--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,28 +1,33 @@
-<span class="material-symbols-outlined"> menu </span>
 <div class="content__menu">
   <div class="logo__menu">
     <img src="../../../assets/logo.png" alt="logo" />
     <span>Sarah</span>
+    <!-- <div class="menu__icon">
+      <img src="../../../assets/icons8-cardápio.svg" class="burger" width="45px" />
+    </div> -->
   </div>
   <div class="menu">
-    <img src="../../../assets/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="">
     <div class="nav__content">
       <ul>
         <li>
           <a
             href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
+            target="_blank"
             ><i class="fa-brands fa-whatsapp fa-1x"></i><span>Whatsapp</span></a
           >
         </li>
         <li>
           <a
             href="https://www.instagram.com/artby_beatriz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
+            target="_blank"
             ><i class="fa-brands fa-instagram fa-1x"></i
             ><span>Instagram</span></a
           >
         </li>
         <li>
-          <a href="https://www.tiktok.com/@artby_beatriz?_t=8hWXpVuPekf&_r=1"
+          <a
+            href="https://www.tiktok.com/@artby_beatriz?_t=8hWXpVuPekf&_r=1"
+            target="_blank"
             ><i class="fa-brands fa-tiktok fa-1x"></i><span>Tiktok</span></a
           >
         </li>
@@ -31,6 +36,7 @@
     <div class="buttom__menu">
       <a
         href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
+        target="_blank"
         ><button class="Agendamento">AGENDAMENTO</button></a
       >
       <button class="ver-mais">VER MAIS</button>
