feat: mobile design

--- a/src/app/components/menu-bar/menu-bar.component.sass
+++ b/src/app/components/menu-bar/menu-bar.component.sass
@@ -1,10 +1,10 @@
 .content__menu
   display: block
-  position: absolute
+  position: fixed
   top: 0
   background-color: black
   width: 148px
-  height: 680px
+  height: 643px
   border: solid
 
   .logo__menu
