--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,31 @@
+<app-menu-bar></app-menu-bar>
 <div class="home__content">
-  <app-menu-bar></app-menu-bar>
-  <div class="card__content">
-  <app-card image="../../../assets/lua2.jpg"></app-card>
-  <app-card image="../../../assets/casal.jpg"></app-card>
-  <app-card image="../../../assets/luffy.jpg" price="R$ 50,00" status="INDISPONÍVEL"></app-card>
+  <div class="content">
+    <div class="card__content">
+      <app-card image="../../../assets/lua2.jpg"></app-card>
+      <app-card image="../../../assets/casal.jpg"></app-card>
+      <app-card
+        image="../../../assets/luffy.jpg"
+        price="R$ 50,00"
+        status="INDISPONÍVEL"
+      ></app-card>
+      <app-card image="../../../assets/lagoa2.jpg"></app-card>
+    </div>
+    <div class="card__down">
+      <app-card image="../../../assets/luffy.jpg"></app-card>
+      <app-card image="../../../assets/pufEmel.jpg"></app-card>
+      <app-card image="../../../assets/UsinhoPuf.jpeg"></app-card>
+    </div>
+  </div>
+  <div class="about__content">
+    <app-about></app-about>
+  </div>
 </div>
-</div>
+
 <div class="btn-whatsapp">
   <a
-            href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
-            target="_blank"
-            ><img src="../../../assets/whatssapp.svg" alt=""></a>
+    href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
+    target="_blank"
+    ><img src="../../../assets/whatssapp.svg" alt=""
+  /></a>
 </div>
