feat: update prices

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,11 @@
         price="R$ 50,00"
         status="INDISPONÍVEL"
       ></app-card>
-      <app-card image="../../../assets/lagoa2.jpg"></app-card>
+      <app-card
+        image="../../../assets/lagoa2.jpg"
+        price="R$ 50,00"
+        status="INDISPONÍVEL"
+      ></app-card>
     </div>
     <div class="card__down">
       <app-card image="../../../assets/luffy.jpg"></app-card>
