feat: section contact

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,23 +6,41 @@
       <app-card image="../../../assets/casal.jpg"></app-card>
       <app-card
         image="../../../assets/luffy.jpg"
-        price="R$ 50,00"
+        price="R$ 120,00"
         status="INDISPONÍVEL"
       ></app-card>
       <app-card
         image="../../../assets/lagoa2.jpg"
-        price="R$ 50,00"
+        price="R$ 25,00"
         status="INDISPONÍVEL"
       ></app-card>
     </div>
     <div class="card__down">
-      <app-card image="../../../assets/luffy.jpg"></app-card>
-      <app-card image="../../../assets/pufEmel.jpg"></app-card>
-      <app-card image="../../../assets/UsinhoPuf.jpeg"></app-card>
+      <app-card
+        image="../../../assets/luffy.jpg"
+        price="R$ 120,00"
+        status="INDISPONÍVEL"
+      ></app-card>
+      <app-card
+        image="../../../assets/pufEmel.jpg"
+        price="R$ 25,00"
+        status="INDISPONÍVEL"
+      ></app-card>
+      <app-card
+        image="../../../assets/UsinhoPuf.jpeg"
+        price="R$ 35,00"
+        status="INDISPONÍVEL"
+      ></app-card>
     </div>
   </div>
   <div class="about__content">
     <app-about></app-about>
+  </div>
+  <div class="contact__content">
+    <app-forms></app-forms>
+  </div>
+  <div class="footer_content">
+    
   </div>
 </div>
 
