--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -18,6 +18,11 @@
   margin: 10px
   justify-content: flex-start
 
+.contact__content
+  margin: 5px
+  margin-top: 0
+
+
 .btn-whatsapp
   position: fixed
   bottom: 3px
