--- a/src/app/components/forms/forms.component.sass
+++ b/src/app/components/forms/forms.component.sass
@@ -7,7 +7,10 @@
   border: 1px solid #666666
   margin: 20px
   border-radius: 1rem
-
+  h1
+    display: flex
+    justify-content: center
+    margin-top: 10px
 .header__form
   display: flex
   flex-direction: column
@@ -22,5 +25,17 @@
     height: 228px
     width: 332px
   .btn-enviar
-    width: 60px
+    background-color: black
+    border: 1px solid #363636
+    color: #FFF
+    margin-top: 10px
+    width: 120px
+    height: 30px
+    margin-bottom: 10px
+    margin-left: 10px
+    border-radius: 1rem
 
+@media (max-width: 760px)
+  .txt
+    max-height: 228px
+    max-width: 332px
