--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -11,7 +11,7 @@
       >
   </div>
   <div class="img">
-    <img src="../../../assets/luffy2.jpeg" alt="luffy" />
+    <app-forms></app-forms>
 
   </div>
 </div>
