--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -18,11 +18,6 @@
   margin: 10px
   justify-content: flex-start
 
-.contact__content
-  margin: 5px
-  margin-top: 0
-
-
 .btn-whatsapp
   position: fixed
   bottom: 3px
@@ -31,6 +26,49 @@
 
   img
     max-width: 74px
+
+.footer_content
+  border: 1px solid red
+  background-color: black
+  display: flex
+  justify-content: flex-start
+.logo__footer
+  
+  color: #FFFFFF
+  display: flex
+  flex-direction: column
+  height: 180px
+  width: 396px
+  margin: 20px
+
+  img
+    max-width: 80px
+    border-radius: 50%
+
+  span
+    font-size: 40px
+    margin-bottom: 5px
+    margin-left: 10px
+
+.buttom__footer
+  margin-left: 22px
+  display: flex
+  flex-direction: column
+  button
+    width: 120px
+    height: 30px
+    margin-bottom: 10px
+    border-radius: 1rem
+.Agendamento
+  color: #FFFFFF
+  background-color: Black
+  border: 1px solid #242424
+
+.ver-mais
+  color: #FFFFFF
+  background-color: Black
+  border: 1px solid #242424
+
 @media (max-width: 700px)
   .home__content
     display: flex
