feat: footer section

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,10 +1,11 @@
 <div class="content__menu">
   <div class="logo__menu">
-    <img src="../../../assets/logo.png" alt="logo" />
-    <span>Sarah</span>
-    <!-- <div class="menu__icon">
-      <img src="../../../assets/icons8-cardápio.svg" class="burger" width="45px" />
-    </div> -->
+    <a
+            href="https://www.instagram.com/artby_beatriz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
+            target="_blank"
+            >
+    <img src="../../../assets/newLogo.jpg" alt="logo" />
+    <span>Sarah</span></a>
   </div>
   <div class="menu">
     <div class="nav__content">
