--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -40,7 +40,7 @@
     <div>
       <div class="logo__footer">
         <img src="../../../assets/logo.png" alt="logo" />
-        <span>Sarah</span>
+        <span>AQUI PARA SUA JORNADA CRIATIVA</span>
       </div>
       <div class="buttom__footer">
         <a
