--- a/src/app/components/menu-bar/menu-bar.component.sass
+++ b/src/app/components/menu-bar/menu-bar.component.sass
@@ -15,13 +15,16 @@
     color: #FFFFFF
 
     margin: 20px
-
+    a
+      display: flex
+      flex-direction: row
     img
       display: flex
       flex-direction: row
       margin: auto
       height: 45px
-      border-radius: 50%
+      margin-right: 10px
+      border-radius: 100%
 
     span
       margin: auto
@@ -84,7 +87,6 @@
     margin-left: 80px
     border-radius: 0px
 
-
   .content__menu
     margin: 0
     padding: 0
@@ -105,6 +107,9 @@
       margin-bottom: 15px
       margin-top: 15px
 
+      a
+        text-decoration: none
+        color: #FFFFFF
       img
         display: flex
         margin: 0
