--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -28,12 +28,11 @@
     max-width: 74px
 
 .footer_content
-  border: 1px solid red
   background-color: black
   display: flex
-  justify-content: flex-start
+  justify-content: space-between
 .logo__footer
-  
+
   color: #FFFFFF
   display: flex
   flex-direction: column
@@ -43,17 +42,20 @@
 
   img
     max-width: 80px
+    margin: 20px
     border-radius: 50%
 
   span
     font-size: 40px
+    margin: 10px
     margin-bottom: 5px
     margin-left: 10px
 
 .buttom__footer
   margin-left: 22px
+  margin-top: 68px
   display: flex
-  flex-direction: column
+  flex-direction: row
   button
     width: 120px
     height: 30px
@@ -68,6 +70,23 @@
   color: #FFFFFF
   background-color: Black
   border: 1px solid #242424
+
+.nav__content
+  display: flex
+  margin-right: 180px
+  margin-top: 20px
+
+  ul
+    text-decoration: none
+    list-style: none
+    li
+      font-size: 44px
+      text-decoration: none
+      list-style: none
+      a
+        color: #FFFFFF
+        i
+          margin: 20px
 
 @media (max-width: 700px)
   .home__content
@@ -88,3 +107,31 @@
     flex-direction: column
     justify-content: space-between
     margin: auto
+
+  .footer_content
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    align-content: center
+    text-align: center
+
+    .nav__content
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
+      align-content: center
+      text-align: center
+      ul
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        align-content: center
+        text-align: center
+        margin-left: 20px
+        li
+          a
+            display: flex
+            flex-direction: row
