--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -36,47 +36,8 @@
   <div class="about__content">
     <app-about></app-about>
   </div>
-  <div class="footer_content">
-    <div>
-      <div class="logo__footer">
-        <img src="../../../assets/logo.png" alt="logo" />
-        <span>AQUI PARA SUA JORNADA CRIATIVA</span>
-      </div>
-      <div class="buttom__footer">
-        <a
-          href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
-          target="_blank"
-          ><button class="Agendamento">AGENDAMENTO</button></a
-        >
-        <button class="ver-mais">VER MAIS</button>
-      </div>
-    </div>
-    <div class="nav__content">
-      <ul>
-        <li>
-          <a
-            href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
-            target="_blank"
-            ><i class="fa-brands fa-whatsapp fa-1x"></i><span>Whatsapp</span></a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/artby_beatriz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
-            target="_blank"
-            ><i class="fa-brands fa-instagram fa-1x"></i
-            ><span>Instagram</span></a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.tiktok.com/@artby_beatriz?_t=8hWXpVuPekf&_r=1"
-            target="_blank"
-            ><i class="fa-brands fa-tiktok fa-1x"></i><span>Tiktok</span></a
-          >
-        </li>
-      </ul>
-    </div>
+  <div class="footer">
+    <app-footer></app-footer>
   </div>
 </div>
 
