read: check details

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
     <a
         href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
         target="_blank"
-        ><button>AGENDAR</button></a
+        ><button>ENCOMENDAR</button></a
       >
   </div>
   <div class="img">
