--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="content">
     <div class="card__content">
       <app-card image="../../../assets/lua2.jpg"></app-card>
-      <app-card image="../../../assets/casal.jpg"></app-card>
+      <app-card image="../../../assets/casal.jpg" status="INDISPONÍVEL"></app-card>
       <app-card
         image="../../../assets/luffy.jpg"
         price="R$ 120,00"
@@ -16,11 +16,6 @@
       ></app-card>
     </div>
     <div class="card__down">
-      <app-card
-        image="../../../assets/luffy.jpg"
-        price="R$ 120,00"
-        status="INDISPONÍVEL"
-      ></app-card>
       <app-card
         image="../../../assets/pufEmel.jpg"
         price="R$ 25,00"
