--- a/src/app/components/about/about.component.sass
+++ b/src/app/components/about/about.component.sass
@@ -8,13 +8,14 @@
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: flex-start
+  justify-content: baseline
+  margin: 20px 40px 20px 40px
   h1
     margin-top: 10px
   p
     margin: 20px
     text-align: start
-  a>  button
+  a >  button
     margin-right: 15px
     width: 120px
     height: 30px
