--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
       <a
         href="https://wa.me/+5531973532292?text=Olá, Queria fazer um orçamento..."
         target="_blank"
-        ><button class="Agendamento">AGENDAMENTO</button></a
+        ><button class="Agendamento">ENCOMENDAR</button></a
       >
       <button class="ver-mais">VER MAIS</button>
     </div>
