--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -1,17 +1,29 @@
 <div class="form__content">
-  <div class="esquerda">
-    <h1>Contate-nos</h1>
-    <div class="header__form">
-      <label for="name">Nome: </label>
-      <input id="name" type="text" placeholder="   Insira seu Nome" />
-      <label for="email">Email: </label
-      ><input type="email" name="email" id="email" placeholder="   Insira seu Email" />
+  <form action="https://formsubmit.co/vsbeatrizsantana@gmail.com" method="post">
+    <input type="hidden" name="_next" value="https://sarahbeatriz.vercel.app/">
+    <div class="esquerda">
+      <h1>Contate-nos</h1>
+      <div class="header__form">
+        <label for="name">Nome: </label>
+        <input id="name" type="text" placeholder="   Insira seu Nome" />
+        <label for="email">Email: </label
+        ><input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="   Insira seu Email"
+        />
+      </div>
+      <div class="body__form">
+        <label for="mensagem">Mensagem: </label>
+        <textarea name="text" id="txt" cols="30" rows="10"></textarea>
+        <input
+          type="submit"
+          value="Enviar"
+          class="btn-enviar"
+          (click)="enviarEmail()"
+        />
+      </div>
     </div>
-    <div class="body__form">
-      <label for="mensagem">Mensagem: </label>
-      <input type="text" class="txt" />
-      <input type="button" value="Enviar" class="btn-enviar" (click)="enviarEmail()"/>
-    </div>
-  </div>
-
+  </form>
 </div>
