update: status product

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,28 +3,28 @@
   <div class="content">
     <div class="card__content">
       <app-card image="../../../assets/lua2.jpg"></app-card>
-      <app-card image="../../../assets/casal.jpg" status="INDISPONÍVEL"></app-card>
+      <app-card image="../../../assets/casal.jpg" status="ENCOMENDAR"></app-card>
       <app-card
         image="../../../assets/luffy.jpg"
         price="R$ 120,00"
-        status="INDISPONÍVEL"
+        status="ENCOMENDAR"
       ></app-card>
       <app-card
         image="../../../assets/lagoa2.jpg"
         price="R$ 25,00"
-        status="INDISPONÍVEL"
+        status="ENCOMENDAR"
       ></app-card>
     </div>
     <div class="card__down">
       <app-card
         image="../../../assets/pufEmel.jpg"
         price="R$ 25,00"
-        status="INDISPONÍVEL"
+        status="ENCOMENDAR"
       ></app-card>
       <app-card
         image="../../../assets/UsinhoPuf.jpeg"
         price="R$ 35,00"
-        status="INDISPONÍVEL"
+        status="ENCOMENDAR"
       ></app-card>
     </div>
   </div>
